# irods_api_plugin_genquery2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  irods_consortium_continuous_integration_build_hook.py
api_plugin/: CMakeLists.txt
api_plugin/include/irods/plugins/api/: genquery2_common.h
api_plugin/include/irods/plugins/api/private/: genquery2_common.hpp
api_plugin/src/: client.cpp  plugin_factory.cpp  server.cpp
client/: CMakeLists.txt
client/src/: main.cpp
parser/: CMakeLists.txt
parser/dsl/: lexer.l  parser.y
parser/include/irods/: edge_property.hpp  genquery2_ast_types.hpp  genquery2_driver.hpp  genquery2_scanner.hpp  genquery2_sql.hpp  genquery_ast_types.hpp  genquery_scanner.hpp  genquery_sql.hpp  genquery_wrapper.hpp  table_column_key_maps.hpp  vertex_property.hpp
parser/src/: genquery2_driver.cpp  genquery2_sql.cpp  genquery_sql.cpp  genquery_wrapper.cpp  main.cpp
rule_engine/: CMakeLists.txt
rule_engine/src/: main.cpp
